tests/errors/encoding.pyx
# coding=ASCII
# mode: error

"""
Très bien.
"""

_ERRORS = u"""
0:0:Decoding error, missing or incorrect coding=<encoding-name> at top of source ('ascii' codec can't decode byte 0x8f in position 36: ordinal not in range(128))
"""
